[package]
name = "wordle"
version = "0.1.0"
edition = "2018"
default-run = "wordle"

[dependencies]
rand = "0.8"
colored = "2.0"
clap = { version = "3.0", features = ["derive"] }
thirtyfour_sync = "0.27.1"
serde_json = "1.0"
serde = "1.0"
rayon = "1.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
